# t2-gpu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  analysis.ipynb  generate_presets.py  mover_csv.py  requirements.txt  run_presets.py
data/nico/: cpu-parallel-grid1024x1024-block16x16-1d.csv  cpu-parallel-grid1024x1024-block16x16-2d.csv  cpu-parallel-grid1024x1024-block30x30-2d-unaligned_1024x1024_30x30_2d.csv  cpu-parallel-grid1024x1024-block32x32-2d_1024x1024_32x32_2d.csv  cpu-parallel-grid1024x1024-block7x5-1d-unaligned_1024x1024_35_1d.csv  cpu-parallel-grid1024x1024-block8x4-1d_1024x1024_32_1d.csv  cpu-parallel-grid1024x1024-block9x9-1d-unaligned.csv  cpu-parallel-grid1024x1024-block9x9-2d-unaligned.csv  cpu-parallel-grid128x64-block16x16-1d.csv  cpu-parallel-grid128x64-block16x16-2d.csv  cpu-parallel-grid128x64-block30x30-2d-unaligned_128x64_30x30_2d.csv  cpu-parallel-grid128x64-block32x32-2d_128x64_32x32_2d.csv  cpu-parallel-grid128x64-block7x5-1d-unaligned_128x64_35_1d.csv  cpu-parallel-grid128x64-block8x4-1d_128x64_32_1d.csv  cpu-parallel-grid128x64-block9x9-1d-unaligned.csv  cpu-parallel-grid128x64-block9x9-2d-unaligned.csv  cpu-parallel-grid2048x4096-block16x16-1d.csv  cpu-parallel-grid2048x4096-block16x16-2d.csv  cpu-parallel-grid2048x4096-block30x30-2d-unaligned_2048x4096_30x30_2d.csv  cpu-parallel-grid2048x4096-block32x32-2d_2048x4096_32x32_2d.csv  cpu-parallel-grid2048x4096-block7x5-1d-unaligned_2048x4096_35_1d.csv  cpu-parallel-grid2048x4096-block8x4-1d_2048x4096_32_1d.csv  cpu-parallel-grid2048x4096-block9x9-1d-unaligned.csv  cpu-parallel-grid2048x4096-block9x9-2d-unaligned.csv  cpu-parallel-grid32768x32768-block16x16-1d.csv  cpu-parallel-grid32768x32768-block16x16-2d.csv  cpu-parallel-grid32768x32768-block30x30-2d-unaligned_32768x32768_30x30_2d.csv  cpu-parallel-grid32768x32768-block32x32-2d_32768x32768_32x32_2d.csv  cpu-parallel-grid32768x32768-block7x5-1d-unaligned_32768x32768_35_1d.csv  cpu-parallel-grid32768x32768-block8x4-1d_32768x32768_32_1d.csv  cpu-parallel-grid32768x32768-block9x9-1d-unaligned.csv  cpu-parallel-grid32768x32768-block9x9-2d-unaligned.csv  cpu-parallel-grid512x512-block16x16-1d.csv  cpu-parallel-grid512x512-block16x16-2d.csv  cpu-parallel-grid512x512-block30x30-2d-unaligned_512x512_30x30_2d.csv  cpu-parallel-grid512x512-block32x32-2d_512x512_32x32_2d.csv  cpu-parallel-grid512x512-block7x5-1d-unaligned_512x512_35_1d.csv  cpu-parallel-grid512x512-block8x4-1d_512x512_32_1d.csv  cpu-parallel-grid512x512-block9x9-1d-unaligned.csv  cpu-parallel-grid512x512-block9x9-2d-unaligned.csv  (+152 more)
data/vicente/: cpu-parallel-grid1024x1024-block30x30-2d-unaligned_1024x1024_30x30_2d.csv  cpu-parallel-grid1024x1024-block32x32-2d_1024x1024_32x32_2d.csv  cpu-parallel-grid1024x1024-block7x5-1d-unaligned_1024x1024_35_1d.csv  cpu-parallel-grid1024x1024-block8x4-1d_1024x1024_32_1d.csv  cpu-parallel-grid128x64-block30x30-2d-unaligned_128x64_30x30_2d.csv  cpu-parallel-grid128x64-block32x32-2d_128x64_32x32_2d.csv  cpu-parallel-grid128x64-block7x5-1d-unaligned_128x64_35_1d.csv  cpu-parallel-grid128x64-block8x4-1d_128x64_32_1d.csv  cpu-parallel-grid2048x4096-block30x30-2d-unaligned_2048x4096_30x30_2d.csv  cpu-parallel-grid2048x4096-block32x32-2d_2048x4096_32x32_2d.csv  cpu-parallel-grid2048x4096-block7x5-1d-unaligned_2048x4096_35_1d.csv  cpu-parallel-grid2048x4096-block8x4-1d_2048x4096_32_1d.csv  cpu-parallel-grid32768x32768-block30x30-2d-unaligned_32768x32768_30x30_2d.csv  cpu-parallel-grid32768x32768-block32x32-2d_32768x32768_32x32_2d.csv  cpu-parallel-grid32768x32768-block7x5-1d-unaligned_32768x32768_35_1d.csv  cpu-parallel-grid32768x32768-block8x4-1d_32768x32768_32_1d.csv  cpu-parallel-grid512x512-block30x30-2d-unaligned_512x512_30x30_2d.csv  cpu-parallel-grid512x512-block32x32-2d_512x512_32x32_2d.csv  cpu-parallel-grid512x512-block7x5-1d-unaligned_512x512_35_1d.csv  cpu-parallel-grid512x512-block8x4-1d_512x512_32_1d.csv  cpu-parallel-grid8192x8192-block30x30-2d-unaligned_8192x8192_30x30_2d.csv  cpu-parallel-grid8192x8192-block32x32-2d_8192x8192_32x32_2d.csv  cpu-parallel-grid8192x8192-block7x5-1d-unaligned_8192x8192_35_1d.csv  cpu-parallel-grid8192x8192-block8x4-1d_8192x8192_32_1d.csv  cpu-serial-grid1024x1024-block30x30-2d-unaligned_1024x1024_30x30_2d.csv  cpu-serial-grid1024x1024-block32x32-2d_1024x1024_32x32_2d.csv  cpu-serial-grid1024x1024-block7x5-1d-unaligned_1024x1024_35_1d.csv  cpu-serial-grid1024x1024-block8x4-1d_1024x1024_32_1d.csv  cpu-serial-grid128x64-block30x30-2d-unaligned_128x64_30x30_2d.csv  cpu-serial-grid128x64-block32x32-2d_128x64_32x32_2d.csv  cpu-serial-grid128x64-block7x5-1d-unaligned_128x64_35_1d.csv  cpu-serial-grid128x64-block8x4-1d_128x64_32_1d.csv  cpu-serial-grid2048x4096-block30x30-2d-unaligned_2048x4096_30x30_2d.csv  cpu-serial-grid2048x4096-block32x32-2d_2048x4096_32x32_2d.csv  cpu-serial-grid2048x4096-block7x5-1d-unaligned_2048x4096_35_1d.csv  cpu-serial-grid2048x4096-block8x4-1d_2048x4096_32_1d.csv  cpu-serial-grid32768x32768-block30x30-2d-unaligned_32768x32768_30x30_2d.csv  cpu-serial-grid32768x32768-block32x32-2d_32768x32768_32x32_2d.csv  cpu-serial-grid32768x32768-block7x5-1d-unaligned_32768x32768_35_1d.csv  cpu-serial-grid32768x32768-block8x4-1d_32768x32768_32_1d.csv  (+57 more)
include/: array_macros.h  benchmark.h  constants.h  game_of_life.hpp  game_of_life_cuda.hpp  game_of_life_opencl.hpp  game_of_life_parallel.hpp  game_of_life_serial.hpp
src/: CMakeLists.txt  benchmark.cpp  cpu_parallel_benchmark.cpp  cpu_parallel_example.cpp  cpu_serial_benchmark.cpp  cpu_serial_example.cpp  cuda_benchmark.cpp  cuda_kernel_1d.cu  cuda_kernel_2d.cu  game_of_life_cuda copy.cu  game_of_life_cuda.cpp  game_of_life_cuda.cu  game_of_life_opencl.cpp  game_of_life_parallel.cpp  game_of_life_serial.cpp  kernel.cl  kernel1D.cl  kernel2D.cl  main.cpp  opencl_benchmark.cpp  opencl_test.cpp  prueba.cpp
